fix: replace service images with correct

--- a/plants/css/style.css
+++ b/plants/css/style.css
@@ -351,6 +351,7 @@ body {
   height: 350px;
   display: block;
   border-radius: 20px 20px 0px 0px;
+  object-fit: cover;
 }
 
 .service__card-title {
