--- a/plants/css/style.css
+++ b/plants/css/style.css
@@ -509,6 +509,10 @@ a:hover {
   border-radius: 20px;
 }
 
+.price__list-item__expanded {
+  background-color: #D6E7D2;
+}
+
 .price__list-item-header-container{
   display: flex;
   flex-wrap: wrap;
@@ -528,6 +532,11 @@ a:hover {
   text-decoration: none;
   line-height: 20px;
   content: url('../assets/svg/accordion_btn_regular.svg');
+  transition: 0.2s linear all;
+}
+
+.price__list-item-header-btn__expanded {
+  content: url('../assets/svg/accordion_btn_active.svg');
 }
 
 .price__list-item-header-image{
