--- a/plants/css/style.css
+++ b/plants/css/style.css
@@ -669,14 +669,23 @@ a:hover {
   position: relative;
   width: 450px;
   height: 50px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 0px;
   margin-bottom: 47px;
   margin-top: 95px;
+  background-color: #D6E7D2;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: 20px;
 }
 
-.custom-select-expanded {
+.custom-select-expanded{
   box-shadow:none;
+  background-color: #C1E698;
+} 
+.custom-select-selected
+{
+  box-shadow:none;
+  background-color: #C1E698;
+  font-size: 16px;
 }
 
 /*hide original SELECT element:*/
@@ -686,11 +695,10 @@ a:hover {
 
 /* selected item style*/
 .select-selected {
-  background-color: #D6E7D2;
+  /* */
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
   line-height: 40px;
   letter-spacing: 0.05em;
   color: #717171;
@@ -730,7 +738,7 @@ a:hover {
   left: 0;
   right: 0;
   z-index: 99;
-  padding: 27px 35px;
+  padding: 35px 50px 35px 20px;
 }
 
 .select-items div{
@@ -767,7 +775,6 @@ a:hover {
 }
 
 .city__card {
- 
   background: #EDF2EC;
   border: 1px solid #000000;
   border-radius: 20px;
