--- a/plants/css/style.css
+++ b/plants/css/style.css
@@ -322,18 +322,17 @@ a:hover {
   color: var(--orange-var);
   text-decoration: none;
   margin-right: 37px;
+  transition: 1.5s all linear;
 }
 
 .service__button:hover{
   background-color: var(--orange-var);
   color: #fff;
-  transition: 1s;
 }
 
 .service__button__active {
   background-color: var(--orange-var);
   color: #fff;
-  transition: 1s;
 }
 
 .service__button__disabled {
@@ -397,9 +396,14 @@ a:hover {
   text-align: center;
 }
 
+.service__card{
+  filter: blur(0);
+  transition: 1.5s all linear;
+}
+
 .blur {
-  filter: blur(1.5px);
-  transition: 1s;
+  filter: blur(2px);
+  transition: 1.5s all linear;
 }
 
 /*main service end */
