--- a/css/style.css
+++ b/css/style.css
@@ -85,29 +85,6 @@ body {
     height: 100%;
 }
 
-.footer{
-    padding:15px 0;
-    background-color: #24292F;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-}
-
-.footer-element {
-    padding: 0 15px;
-}
-
-.footer-logo-image{
-    height: 30px;
-    width: 80px;
-}
-
-.footer-text {
-    font-size: 16px;
-    color: #FFF;
-}
-
 .section {
     padding-left: 30px;
     padding-right: 30px;
@@ -122,15 +99,6 @@ body {
     font-weight: normal;
     border-bottom: 1px solid #B5B5B5;
 }
-
-/* .section-title::after {
-    content: "";
-    display: block;
-    width:calc(10% );
-    height: 1px;
-    background: var(--header-font-color);
-    position: absolute;
-} */
 
 .profile-title {
     word-break: break-word;
@@ -165,3 +133,25 @@ body {
     padding:0;
     white-space: normal;
 }
+
+/* Begin Footer */
+
+.footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    
+    background-color: #24292F;
+    padding: 15px;
+
+    color: white;
+    font-size: 16px;
+}
+
+.footer-logo-image{
+    height: 30px;
+    width: 80px;
+}
+
+/* End Footer   */
